# ecommerce-product-optimizer

./: Dockerfile  README.md  pipeline_output.json  pyproject.toml
.github/workflows/: ci.yml
docs/: setup.md
src/: __init__.py  config.py  pipeline.py
src/agents/: content_optimizer.py  pricing_agent.py  product_analyzer.py  review_manager.py
tests/: conftest.py  test_content_optimizer.py  test_pipeline.py  test_pricing_agent.py  test_product_analyzer.py  test_review_manager.py
